# Elaborato_di_programmazione

./: CMakeLists.txt  Optimization_Lab.ipynb  README.md  chat.cpp  chat.h  main.cpp  message.cpp  message.h  messageNotifier.cpp  messageNotifier.h  observer.h  subject.h  unreadMessageNotification.cpp  unreadMessageNotification.h  user.cpp  user.h  version.h
test/: CMakeLists.txt  chatTest.cpp  chatTestFixture.cpp  messageNotifierTest.cpp  messageTest.cpp  runAllTests.cpp  userTest.cpp
